# civ-game

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  Makefile
resources/: sprite-sheet.ase  viking.ase
src/: CMakeLists.txt  application.cpp  application.hpp  main.c  main.cpp  render.c  render.h  utils.c  utils.h  world.c  world.h
src/renderer/: command.cpp  command.hpp  frame.cpp  frame.hpp  renderer.cpp  renderer.hpp  swapchain.cpp  swapchain.hpp  vkb.cpp  vkb.hpp
